--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -7,27 +7,25 @@
 {% block title %}{{ parent() }} - Welcome{% endblock %}
 
 {% block main %}
-<<!DOCTYPE html>
     <html lang="fr">
 
     <head>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="Auteur" content="Dylan Soton & Victor Védie">
 
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>La Boule Magique</title>
 
         <!-- Bootstrap core CSS -->
-        <link href="/css/bootstrap.css" rel="stylesheet">
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
 
-        <!-- Custom fonts for this template -->
-        <link href="/css/bootstrap.css" rel="stylesheet">
+        <!-- Quelques polices d'écritures plus jolies :) -->
+        <link href="/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
+        <!-- Un Css modifié :) -->
         <link href="css/accueil.css" rel="stylesheet">
 
     </head>
@@ -37,7 +35,7 @@
     <!-- NavBar Menu -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">La Boule de Lavage</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -73,7 +71,7 @@
                         <a href="http://club-intech.fr/">INTech</a>. Retrouvez nous sur notre superbe autre site web qui n'est pas encore en ligne...</p>
                 </div>
             </div>
-            <img src="img/ipad.png" class="img-fluid" alt="">
+            <img src="/img/intech_logo.svg" class="img-fluid" alt="">
         </div>
     </section>
 
@@ -141,9 +139,9 @@
         </div>
     </footer>
 
-    <!-- Bootstrap & JavaScript -->
-    <script src="/js/bootstrap.bundle.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <!-- bootstrap.min & JavaScript -->
+    <script src="/js/bootstrap.min.bundle.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
     <script src="js/accueil.js"></script>
 
