--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -72,7 +72,7 @@
             <div class="container d-flex h-100 align-items-center">
                 <div class="mx-auto text-center">
                     <h1 class="mx-auto my-0 text-uppercase">Menu administrateur</h1>
-                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Faite en bonne usage ... </h2>
+                    <h2 class="text-white-50 mx-auto mt-2 mb-5">Faite en bon usage ... </h2>
                     <a href="{{ path('front') }}" class="btn btn-primary js-scroll-trigger">Voir la liste des circuits</a>
                     <a href="{{ path('admin_circuit_index') }}" class="btn btn-primary js-scroll-trigger">Modifier les circuits</a>
                     <a href="{{ path('admin_etape_index') }}" class="btn btn-primary js-scroll-trigger">Modifier les etapes</a>
