--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,7 +5,7 @@
         <script src="/js/bootstrap.min.js"></script>
 
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}La Boule Magique{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
