--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -18,6 +18,12 @@
     <link href="../css/circuit.css" rel="stylesheet">
 
 </head>
+<!-- NavBar Menu -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+        <a href="/">Liste des circuits</a>
+    </div>
+</nav>
 
 
 <section id="container-table" class="about-section text-center">
@@ -99,7 +105,7 @@
                 <th scope="col">Arrivée</th>
                 <th scope="col">Durée (jours)</th>
             </tr>
->
+
             {% for circuitNP in circuitsNP %}
                 <tr>
                     <td>
