--- a/templates/front/home.html.twig
+++ b/templates/front/home.html.twig
@@ -21,7 +21,7 @@
 <!-- NavBar Menu -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-        <a href="/">Liste des circuits</a>
+        <a href="/">Menu Principal</a>
     </div>
 </nav>
 
