--- a/templates/back/etape/show.html.twig
+++ b/templates/back/etape/show.html.twig
@@ -1,34 +1,83 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Etape{% endblock %}
+{% block main %}
+<html lang="fr">
 
-{% block body %}
-    <h1>Etape</h1>
+<head>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ etape.id }}</td>
-            </tr>
-            <tr>
-                <th>NumeroEtape</th>
-                <td>{{ etape.numeroEtape }}</td>
-            </tr>
-            <tr>
-                <th>VilleEtape</th>
-                <td>{{ etape.villeEtape }}</td>
-            </tr>
-            <tr>
-                <th>NombreJours</th>
-                <td>{{ etape.nombreJours }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="Auteur" content="Dylan Soton & Victor Védie">
 
-    <a href="{{ path('admin_etape_index') }}">back to list</a>
+    <!-- Quelques polices d'écritures plus jolies :) -->
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
-    <a href="{{ path('admin_etape_edit', {'id': etape.id}) }}">edit</a>
+    <!-- Un Css modifié :) -->
+    <link href="../../css/circuit.css" rel="stylesheet">
 
+</head>
+<body id="page-top">
+
+<!-- NavBar Menu -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+        <a href="{{ path('admin_etape_index') }}">back to list</a>
+
+        <a href="{{ path('admin_etape_edit', {'id': etape.id}) }}">edit</a>
+
+
+    </div>
     {{ include('back/etape/_delete_form.html.twig') }}
-{% endblock %}
+</nav>
+
+<section id="container-table" class="about-section text-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 mx-auto">
+                    <h1>Etape</h1>
+
+                    <table class="table">
+                        <tbody>
+                            <tr>
+                                <th>Id</th>
+                                <td>{{ etape.id }}</td>
+                            </tr>
+                            <tr>
+                                <th>NumeroEtape</th>
+                                <td>{{ etape.numeroEtape }}</td>
+                            </tr>
+                            <tr>
+                                <th>VilleEtape</th>
+                                <td>{{ etape.villeEtape }}</td>
+                            </tr>
+                            <tr>
+                                <th>NombreJours</th>
+                                <td>{{ etape.nombreJours }}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+            </div>
+        </div>
+    </div>
+</section>
+
+    </body>
+
+    <!-- Petit CopyRight Inutile Donc Indispensable ! -->
+    <footer class="bg-black small text-center text-white-50">
+        <div class="container">
+            Copyright &copy; Dylan Soton & Victor Védie
+        </div>
+    </footer>
+
+    <!-- bootstrap.min & JavaScript -->
+    <script src="/js/bootstrap.min.bundle.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+
+    <script src="js/accueil.js"></script>
+
+    </html>
+
+{% endblock %} {# main #}
